# NucYiXue

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cn_edu_nuc_androidlab_opencvdemo_JNIUtils.h  native-lib.cpp
app/src/main/java/androidlab/edu/cn/nucyixue/: IdentificationActivity.java  MyApp.java
app/src/main/java/androidlab/edu/cn/nucyixue/base/: BaseActivity.java  BaseFragment.java  BaseRecyclerAdapter.java  BaseViewHolder.java  RecyclerOnClickListener.java
app/src/main/java/androidlab/edu/cn/nucyixue/net/: AVService.kt
app/src/main/java/androidlab/edu/cn/nucyixue/ui/: MainActivity.java
app/src/main/java/androidlab/edu/cn/nucyixue/utils/: FileUtils.java  JNIUtils.java  (+2 more)
app/src/main/jni/: androidlab_edu_cn_nucyixue_utils_JNIUtils.h
app/src/main/res/anim/: path_anim.xml
app/src/main/res/drawable/: anim_path.xml  ic_edit_black_24dp.xml  ic_path.xml  shape_back.xml
app/src/main/res/layout/: activity_camera.xml  activity_create_live.xml  activity_find_search.xml  activity_live_comment.xml  activity_live_detail.xml  activity_login.xml  activity_play.xml  activity_push.xml  activity_xuanshang_get.xml  activity_xuanshang_send.xml  dialog_content_circle.xml  fragment_find.xml  fragment_map.xml  fragment_me.xml  fragment_teach.xml  fragment_xuanshang.xml  item_live.xml  item_reward.xml  item_type.xml  search_bottom_dialog.xml
app/src/main/res/menu/: bottom_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/androidlab/edu/cn/nucyixue/: SensitiveTest.kt
(+48 files in other folders)
